--- a/index.html
+++ b/index.html
@@ -98,7 +98,12 @@
             <div class="results-wrapper" id="results-container"></div>
             <div class="pagination-container" id="pagination-container"></div>
         </div>
-        
+            </div>
+    
+    <footer class="footer-banner" id="footerBanner">
+         <div class="footer-content">
+             <div class="footer-links">
+             </div>
              <div class="footer-tools">
                  <span>Impulsado por:</span>
                  <a href="https://github.com/" target="_blank" rel="noopener noreferrer" aria-label="GitHub"><svg class="tool-logo" id="github-logo" fill="#FFFFFF" viewBox="0 0 16 16" height="20"><path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.23.48-2.7-1.07-2.7-1.07-.36-.92-.89-1.17-.89-1.17-.73-.5.06-.49.06-.49.8.06 1.22.82 1.22.82.71 1.21 1.87.86 2.33.66.07-.52.28-.86.51-1.06-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.19 0 .21.15.46.55.38A8.013 8.013 0 0 0 16 8c0-4.42-3.58-8-8-8z"/></svg></a>
